@@ -73,6 +73,9 @@ bzrlib.inspect_for_copy.import_copy_with_hacked_inspect()
 import bzrlib.lazy_regex
 bzrlib.lazy_regex.install_lazy_compile()
 
+import bzrlib.breakin
+bzrlib.breakin.hook_sigquit()
+
 import bzrlib.decorators
 if ('--lsprof' in sys.argv
     or '--lsprof-file' in sys.argv
